--- a/RefactorThis.Domain.Tests/packages.config
+++ b/RefactorThis.Domain.Tests/packages.config
@@ -1,4 +1,20 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.ApplicationInsights" version="2.23.0" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.Telemetry" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.TrxReport.Abstractions" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Extensions.VSTestBridge" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.Testing.Platform.MSBuild" version="1.7.3" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.AdapterUtilities" version="17.13.0" targetFramework="net472" />
+  <package id="Microsoft.TestPlatform.ObjectModel" version="17.13.0" targetFramework="net472" />
   <package id="NUnit" version="3.5.0" targetFramework="net45" />
+  <package id="NUnit3TestAdapter" version="5.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
+  <package id="System.Reflection.Metadata" version="1.6.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net472" />
 </packages>
