Refactor + fix unit tests

--- a/RefactorThis.Domain.Tests/RefactorThis.Domain.Tests.csproj
+++ b/RefactorThis.Domain.Tests/RefactorThis.Domain.Tests.csproj
@@ -107,6 +107,7 @@
   <ItemGroup>
     <Compile Include="InvoicePaymentProcessorTests.cs" />
     <Compile Include="Mock\MockInvoiceRepository.cs" />
+    <Compile Include="Mock\MockTaxService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
